examples/scanner/literals/fail/invalid_unicode_surrogate.axo
const bad = "\uD800"
print(bad)
